examples/test/testpolicy2471.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2471
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key45: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value22
          key23: value22
          key6: value28
      podSelector:
        matchLabels:
          key46: value26
          key39: value39
          key29: value48
